fixed scrolling on mobile nav

--- a/styles/general.css
+++ b/styles/general.css
@@ -4,7 +4,7 @@ html, body {
 }
 
 body {
-  font-family: Aktiv-Grotesk, sans-serif;
+  font-family: Aktiv-Grotesk-Regular, sans-serif;
 }
 
 #sticky-header {
